Add level uploading

--- a/styles/component/TagDisplay.css
+++ b/styles/component/TagDisplay.css
@@ -3,6 +3,7 @@
 	padding: 3px 8px;
 	background-color: var(--bg-norm);
 	border-radius: 20px;
+	user-select: none;
 }
 
 .user-level-tag-container {
