Add bookmarking, user level and bookmark pages

--- a/styles/component/LevelPage.css
+++ b/styles/component/LevelPage.css
@@ -28,6 +28,7 @@
 	background-color: var(--bg-dark);
 	padding: 20px;
 	border-radius: 20px;
+	position: relative;
 }
 
 .level-page-info-container > p, .level-page-info-container > h4 {
