--- a/styles/component/Header.css
+++ b/styles/component/Header.css
@@ -11,8 +11,8 @@
 .titleContainer {
 	display: flex;
 	align-items: stretch;
-	line-height: 55px;
-	height: 55px;
+	line-height: var(--header-height);
+	height: var(--header-height);
 }
 
 .titleContainer h3 {
