--- a/styles/component/EditorMenu.css
+++ b/styles/component/EditorMenu.css
@@ -4,16 +4,21 @@
 	bottom: 0;
 	-webkit-transform: translateX(-50%) translateY(100%);
 	transform: translateX(-50%) translateY(100%);
-	background: var(--bg-dark);
+	background-color: var(--hl-med);
 	padding: 15px 40px;
 	border-radius: 0 0 5px 5px;
-	border: 1px solid var(--bg-darker);
+	border: 1px solid var(--bg-dark);
 	border-top: 0;
 	box-shadow: 0 3px 2px black;
 	cursor: pointer;
 	pointer-events: auto;
 	z-index: 2;
 	width: 120px;
+	transition: background-color linear 0.2s;
+}
+
+.editor-menu-close-button {
+	background-color: var(--bg-dark);
 }
 
 .editor-menu-button p, .editor-menu-close-button p {
