Mark notes with build errors

--- a/styles/component/PianoRoll.css
+++ b/styles/component/PianoRoll.css
@@ -31,3 +31,12 @@
 	border: 1px solid white;
 	border-radius: 2px;
 }
+
+@keyframes error-flash {
+	0%, 100% {
+		background-color: red;
+	}
+	50% {
+		background-color: white;
+	}
+}
