Add level category browsing

--- a/styles/App.css
+++ b/styles/App.css
@@ -7,6 +7,8 @@
 	--hl-dark: #005dcb;
 	--hl-med: #0064e0;
 	--hl-lite: #0073ff;
+  --hl-green: #50b932;
+  --hl-purple: #6d07d2;
 	--link: #61dafb;
 	--inactive-white: rgb(175, 175, 175);
   --text-color: #ffffff;
