--- a/styles/component/Popup.css
+++ b/styles/component/Popup.css
@@ -3,13 +3,14 @@
 	position: fixed;
 	left: 50%;
 	top: 50%;
-	transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%) scale(1);
 	z-index: 10;
 	padding: 35px;
 	border-radius: 20px;
 	box-shadow: 4px 4px 4px black;
 	max-width: 400px;
 	width: 80vw;
+	transition: transform 0.2s;
 }
 
 .popup-x {
@@ -21,4 +22,9 @@
 
 .popup-x > svg {
 	color: var(--text-color);
+}
+
+.popup.closed {
+	transform: translateX(-50%) translateY(-50%) scale(0);
+	pointer-events: none;
 }
