--- a/styles/component/Popup.css
+++ b/styles/component/Popup.css
@@ -8,7 +8,7 @@
 	padding: 35px;
 	border-radius: 20px;
 	box-shadow: 4px 4px 4px black;
-	max-width: 400px;
+	max-width: max-content;
 	width: 80vw;
 	transition: transform 0.15s;
 }
@@ -27,4 +27,23 @@
 .popup.closed {
 	transform: translateX(-50%) translateY(-50%) scale(0);
 	pointer-events: none;
+}
+
+.dark-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	opacity: 0%;
+	transition: opacity 0.3s;
+	background-color: black;
+	z-index: 10;
+	pointer-events: none;
+}
+
+.dark-overlay.open {
+	opacity: 40%;
+	pointer-events: all;
+
 }
