--- a/styles/component/SearchBar.css
+++ b/styles/component/SearchBar.css
@@ -70,3 +70,13 @@
 .search-suggestion-container > span:hover {
 	background-color: var(--bg-litish);
 }
+
+.search-settings-dropdown-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.search-settings-dropdown-container > div {
+	padding: 10px;
+}
