--- a/styles/component/SearchBar.css
+++ b/styles/component/SearchBar.css
@@ -71,10 +71,15 @@
 	background-color: var(--bg-litish);
 }
 
+.search-settings {
+	max-width: 500px;
+}
+
 .search-settings-dropdown-container {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	flex-wrap: wrap;
 }
 
 .search-settings-dropdown-container > div {
