--- a/styles/component/LevelPreview.css
+++ b/styles/component/LevelPreview.css
@@ -1,63 +1,60 @@
 .user-level-preview {
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	align-items: left;
 	width: 90vw;
-	max-width: 750px;
+	max-width: 400px;
 	background-color: var(--bg-dark);
 	padding: 10px;
 	border-radius: 10px;
 	transition: transform 0.2s;
 	cursor: pointer;
+	height: 225px;
 }
 
 .user-level-preview:hover {
 	transform: scale(1.05);
 }
 
-.user-level-preview-img-container {
-	height: 100%;
+.user-level-preview-header {
+	display: flex;
+	margin: 10px 10px;
 }
 
-.user-level-preview-img-container > img {
+.user-level-preview-header > img {
 	aspect-ratio: 16 / 9;
-	max-width: 340px;
-	width: 80vw;
+	width: 140px;
+	min-width: 140px;
+	height: min-content;
+	image-rendering: crisp-edges;
 }
 
 .user-level-preview-details {
 	display: flex;
 	flex-direction: column;
 	margin: 0 10px;
-	gap: 14px;
+	gap: 10px;
+	height: 100%;
 }
 
 .user-level-preview-details > p, .user-level-preview-details > h3 {
 	text-align: left;
 	margin: 0;
 	user-select: none;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
-.view-like-count {
+.icon-count-row {
 	display: flex;
 	align-items: center;
 	gap: 10px;
 }
 
-.view-like-count > p {
+.icon-count-row > p {
 	margin: 0;
 	user-select: none;
-}
-
-@media (max-width: 850px) {
-	.user-level-preview {
-		max-width: 360px;
-	}
-
-	.user-level-preview:hover {
-		transform: none;
-	}
-
-	.user-level-preview-details > p, .user-level-preview-details > h3 {
-		text-align: center;
-	}
 }
