--- a/styles/component/Spinner.css
+++ b/styles/component/Spinner.css
@@ -14,6 +14,7 @@
   border: 6px solid #fff;
   border-color: #fff transparent #fff transparent;
   animation: lds-dual-ring 1.5s ease-in-out infinite;
+  transform: translate(-6px, -6px);
 }
 @keyframes lds-dual-ring {
   0% {
@@ -32,3 +33,22 @@
     transform: rotate(540deg);
   }
 }
+
+.image-spinner {
+  width: 100%;
+  height: 100%;
+  animation: image-spinner 3s ease-in-out infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg-darker)
+}
+
+@keyframes image-spinner {
+    0%,100% {
+      filter: brightness(60%);
+    }
+    50% {
+      filter: brightness(100%);
+    }
+  }
