General polish for thumbnails

--- a/styles/component/LevelThumbnail.css
+++ b/styles/component/LevelThumbnail.css
@@ -19,3 +19,8 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.level-thumbnail-error > svg, .level-thumbnail-removed > svg {
+	width: 50%;
+	height: 50%;
+}
