--- a/styles/component/SearchBar.css
+++ b/styles/component/SearchBar.css
@@ -85,3 +85,26 @@
 .search-settings-dropdown-container > div {
 	padding: 10px;
 }
+
+.count-badge {
+	position: absolute;
+	left: 18px;
+	top: 0px;
+	border-radius: 12px;
+	background-color: var(--hl-med);
+	min-width: 12px;
+	height: 12px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 4px;
+	pointer-events: none;
+}
+
+.count-badge > span {
+	font-size: 16px;
+	font-weight: bold;
+	user-select: none;
+	position: relative;
+	top: -1px;
+}
