Fix super world CLI uoloading, CSS fixes

--- a/styles/component/LevelListings.css
+++ b/styles/component/LevelListings.css
@@ -18,6 +18,7 @@
 .level-preview-table {
 	color: var(--text-color);
 	border-collapse: collapse;
+	width: 100%;
 }
 
 .level-preview-table > tbody > tr {
