--- a/styles/component/EditorView.css
+++ b/styles/component/EditorView.css
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: stretch;
 	flex-direction: column;
-	min-height: calc(100vh - 2 * var(--header-height));
+	min-height: calc(100vh - var(--header-height) - var(--footer-height));
 	justify-content: top;
 }
 
