--- a/styles/component/LandingPage.css
+++ b/styles/component/LandingPage.css
@@ -22,8 +22,9 @@
 
 .home-background {
 	position: relative;
-	height: calc(100vh - 2 * var(--header-height));
-	padding-bottom: calc(var(--header-height));
+	min-height: calc(100vh - 2 * var(--header-height));
+	height: calc(100vh - var(--header-height) - var(--footer-height));
+	padding-bottom: calc(var(--footer-height));
 	padding-top: var(--header-height);
 	overflow: hidden;
 }
