Add donate option to hamburger menu

--- a/styles/component/HamburgerMenu.css
+++ b/styles/component/HamburgerMenu.css
@@ -21,11 +21,13 @@
 	position: fixed;
 	top: var(--header-height);
 	width: 100%;
+	height: calc(100% - var(--header-height));
 	background-color: var(--bg-dark);
 	z-index: 5;
 	box-shadow: 0 3px 2px black;
 	border-top: 1px solid black;
 	transition: transform ease-in-out 0.25s;
+	overflow-y: scroll;
 }
 
 .hamburger-menu.closed {
