Reduce dependency on firebase functions. Use Meilisearch for getting individual users and levels. Remove promo links.

--- a/styles/component/LevelPreview.css
+++ b/styles/component/LevelPreview.css
@@ -7,6 +7,10 @@
 	transform: scale(1.05);
 }
 
+.user-level-preview-wrapper a {
+	text-decoration: none;
+}
+
 .user-level-preview {
 	display: flex;
 	flex-direction: column;
